--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "karma-jasmine": "^0.1.5",
     "karma-chrome-launcher": "^0.1.3",
     "karma-coverage": "^0.2.1",
-    "grunt-browser-sync": "^0.8.2"
+    "grunt-browser-sync": "^0.8.2",
+    "grunt-junit": "^0.1.6",
+    "karma-junit-reporter": "^0.2.2"
   },
   "engines": {
     "node": ">=0.10.0"
