--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "karma-coverage": "^0.2.1",
     "grunt-browser-sync": "^0.8.2",
     "grunt-junit": "^0.1.6",
-    "karma-junit-reporter": "^0.2.2"
+    "karma-junit-reporter": "^0.2.2",
+    "karma-firefox-launcher": "^0.1.3"
   },
   "engines": {
     "node": ">=0.10.0"
